discussion/kv_engine/156699/156699_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38978: Gather "dcp" stats group in a background task

The "dcp" stats group includes aggregated values which may become
expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Iea9b901b8d27164a0f0141967361553f0596f784

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-02 13:09:30.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-02 13:38:09.000000000
Message: 
Patch Set 3: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-02 13:44:00.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/83/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/83/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/83/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/140/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8993/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/92/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/88/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/88/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/88/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/91/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/89/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-05 09:42:33.000000000
Message: 
Patch Set 3: Verified+1

clang-tidy doesn't like tasks.def.h, overriding
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-05 09:42:35.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
